# neuriplo-kserve-runtime

./: .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DESIGN_PATTERNS.md  PLAN.md  README.md  ROADMAP.md  STEP0.md  STEP10.md  STEP10_WIP.md  STEP11_WIP.md  STEP1_WIP.md  STEP3.md  STEP3_WIP.md  STEP4.md  STEP4_WIP.md  STEP6.md  STEP6_WIP.md  STEP7.md  STEP8.md  STEP9.md  STEP9_WIP.md  versions.env
.cursor/rules/: agents-md-maintenance.mdc  gitflow-release-cleanup.mdc  gitflow-workflow.mdc  model-metadata-from-config.mdc  pre-push-lint.mdc
.github/workflows/: ci.yml
cmake/: CompileSpeed.cmake  RuntimeVersion.hpp.in
deploy/kserve/: README.md  canary-inferenceservice.yaml  cluster-serving-runtime.yaml  hpa.yaml  inferencegraph.yaml  inferenceservice.yaml  keda-scaledobject.yaml
docker/: Dockerfile
docs/: errors.md
logs/: log_error_20260605-210840.1616677  log_info_20260605-210840.1616677  object_detection.ERROR  object_detection.INFO  object_detection.WARNING
plan/: DESIGN_PATTERNS.md  E2E_YOLO.md  NEXT_STEPS.md  ROADMAP.md  STEP1.md  STEP11.md  STEP12.md  STEP13.md  STEP14.md  STEP2.md  STEP5.md
proto/: kserve_grpc.proto
scripts/: check-format.sh  e2e-multi-backend.sh  e2e-stub.sh  e2e-yolo.sh  load-test.sh  release-patch.sh
src/: AdminCodec.cpp  AdminCodec.hpp  BackendRegistry.cpp  BackendRegistry.hpp  BatchCompatibility.cpp  BatchCompatibility.hpp  DynamicBatcher.cpp  DynamicBatcher.hpp  Executor.hpp  ExecutorDefault.cpp  GrpcServer.cpp  GrpcServer.hpp  GrpcV2Codec.cpp  GrpcV2Codec.hpp  HttpServer.cpp  HttpServer.hpp  HttpTypes.hpp  InferSnapshot.hpp  KServeErrors.hpp  KServeRuntime.cpp  KServeRuntime.hpp  KServeV2Codec.cpp  KServeV2Codec.hpp  LlmScheduler.cpp  Logging.cpp  Logging.hpp  MetricsRegistry.cpp  MetricsRegistry.hpp  ModelHandle.hpp  ModelLifecycle.cpp  ModelLifecycle.hpp  ModelMetadata.hpp  ModelRegistry.cpp  ModelRegistry.hpp  ModelScheduler.cpp  ModelState.hpp  ModelStateMachine.hpp  NeuriploAdapter.hpp  NeuriploAdapterDefault.cpp  NeuriploExecutor.cpp  (+16 more)
tests/: AdminEndpointTest.cpp  BackendRegistryTest.cpp  BatchCompatibilityTest.cpp  BenchmarkTest.cpp  DeploymentValidationTest.cpp  DynamicBatcherTest.cpp  GrpcIntegrationTest.cpp  GrpcV2CodecTest.cpp  HttpIntegrationTest.cpp  KServeRuntimeTest.cpp  KServeV2CodecTest.cpp  LlmPathTest.cpp  LlmSchedulerTest.cpp  ModelLifecycleTest.cpp  ModelRegistryTest.cpp  ModelStateMachineTest.cpp  MultiModelRegistryTest.cpp  NeuriploExecutorTest.cpp  NeuriploPlatformE2eTest.cpp  OpenAiCodecTest.cpp  RealNeuriploGrpcSmokeTest.cpp  RealNeuriploSmokeTest.cpp  RuntimeConfigTest.cpp  SchedulerRetireQueueTest.cpp  SchedulerTest.cpp  StubExecutorTest.cpp  Test.hpp  TestMain.cpp  TokenizerTest.cpp
